--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <body>
-	<head>This is a test</head>
+	<h1>Hello, World!</h1>
+	<h2>This page may look pretty boring, and that's because it is.</h2>
+	<h2>I'm going to learn HTML/CSS/{other web stuff} eventually, but until then, this is all I've got.</h2>
 </body>
